[project]
name = "ComfyUI-Mohseni-Kit"
description = "A collection of useful nodes for ComfyUI"
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = ["PyQt6", "ftfy", "psutil"]

[project.urls]
Repository = "https://github.com/mohsenicreative/ComfyUI-Mohseni-Kit"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mohseni-mr"
DisplayName = "ComfyUI-Mohseni-Kit"
Icon = "https://raw.githubusercontent.com/mohsenicreative/ComfyUI-Mohseni-Kit/main/assets/mohseni_logo.svg"
